--- a/package.json
+++ b/package.json
@@ -1,28 +1,16 @@
 {
   "name": "currency-exchange-v2-1",
-  "version": "1.0.0",
-  "main": "Node.js",
-  "type": "module",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "node index.js",
-    "test": "jest"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ChelseaWang05/currency-exchange-v2.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ChelseaWang05/currency-exchange-v2/issues"
-  },
-  "homepage": "https://github.com/ChelseaWang05/currency-exchange-v2#readme",
-  "description": "",
   "dependencies": {
-    "prime-number-check": "^1.0.1"
-  },
-  "devDependencies": {
-    "jest": "^30.0.5"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1"
   }
 }
