--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "node bin/www"
+    "start": "node bin/www",
+    "dev": "node bin/www",
+    "dev:frontend": "cd frontend && npm run dev",
+    "dev:both": "concurrently \"npm run dev\" \"npm run dev:frontend\""
   },
   "dependencies": {
     "body-parser": "^2.2.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^17.2.0",
     "express": "~4.16.1",
@@ -17,5 +21,8 @@
     "morgan": "~1.9.1",
     "mysql2": "^3.14.2",
     "node-fetch": "^3.3.2"
+  },
+  "devDependencies": {
+    "concurrently": "^9.2.0"
   }
 }
